Revision history for Perl extension {{$dist->name}}

{{$NEXT}}
    [Enhancements]
    - Handle POD formatting codes embedded in links
    - Render Z<> and X<> as blank strings
    - Handle numeric (hex, octal, and decimal) E<> escapes
    - Convert spaces in S<> to &nbsp;

    [Format Change]
    - S<> no longer produces backticks (code sections).
      This is consistent with perlpod and perlpodspec.
      Use something like S<C<$x + $y>> if you intend it to be treated as code.

1.120001  2011-11-27T04:07:30Z
    [Prereqs]
    - Require version 1.10 of Pod::ParseLink (core in perl 5.12)
      to handle alt text with schemes/absolute URLs.
      This can be changed from "requires" to "recommends" if it poses a problem.

    [Test Fix]
    - Skip tests (rather than fail) for alt text with absolute url
      if Pod::ParseLink < 1.10

1.120000  2011-11-19T05:44:51Z
    [Enhancements]
    - Use Pod::ParseLink to dramatically improve (and simplify) link parsing
      (including sections, alternate text, and man pages).

    [Format Change]
    - NOTE: L</foo> now becomes ["foo"](#foo) instead of [foo](#pod_foo).
      This is consistent with perldoc, perlpodspec, and Pod::Simple::(X)HTML
      which is used for metacpan.org and search.cpan.org.
      No '#pod_' id/name attributes were ever generated so the links
      probably weren't very useful (and probably still aren't).
      If this change presents a problem please report it.

1.110732  2011-11-18T04:06:06Z
    - Change /\h/ to /[ \t]/ for compatibility with older perls.
      Thanks to David Golden for reporting [rt-71961]

1.110731  2011-11-18T03:28:34Z
    - Ensure verbatim pod becomes verbatim markdown
      by increasing indentation if necessary [rt-72414]
    - Co-maintainership granted to RWSTAUNER

1.110730  2011-03-14 10:11:52 Europe/Vienna
    - make bulleted lists work at least minimally (thanks ap)

1.103491  2010-12-15 23:03:02 Europe/Vienna
    - added Ryan C. Thompson's email address
